<resources>
    <string name="app_name">AskSimple</string>
    <string name="app_logo">AskSimple Logo</string>
    <string name="app_value">Asking Made Simple</string>

    <string name="splash_ask">Ask</string>
    <string name="splash_simple">Simple</string>

    <string name="button_login">Log In</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_register">Register</string>
    <string name="button_create">Create an Account</string>

    <string name="name">Name</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="teaching_assistant">Teaching Assistant</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="title_activity_blahblah">blahblah</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- activity_registered.xml -->
    <string name="registered_welcome">Welcome</string>
    <string name="registered_name">Scott</string>
    <string name="registered_message">You are now registered</string>
    <string name="registered_button">Log in now</string>

    <!-- activity_add_course.xml -->
    <string name="add_course_qr">Scan Course QR Code</string>
    <string name="add_course_or">Or</string>
    <string name="add_course_enter">Enter Course ID</string>
    <string name="add_course_hint">Course ID</string>
    <string name="add_course_button">Add Course</string>

    <string name="textinput_userid">User ID</string>
    <string name="textinput_password">Password</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="answers">Answers:</string>
    <string name="question">Question:</string>
    <string name="approved">✔ Approved</string>
    <string name="yourAnswer">Your answer</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
