<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/app_bar_height">
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SideLayoutStyle"
        android:textSize="@dimen/mid_text_size"
        android:text="@string/question"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SideLayoutStyle"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="5dp">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/QAFragment_questionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_text_size"
            android:layout_weight="0.8"
            android:text="Which prototype tool should I use for medium-fi prototype? Prof Hao recommended proto.io, but I'm not sure if this is the best tool."/>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingTop="20dp"
            android:layout_weight="0.2">
            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/QAFragment_thumbUpIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_thumb_up_black_48dp"
                android:background="@color/backgroundColor"
                android:tint="@android:color/holo_red_light"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/QAFragment_thumbUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/QAFragment_thumbUpIcon"
                android:textSize="@dimen/large_text_size"
                android:text="30"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        style="@style/SideLayoutStyle">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/QAFragment_approvedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:layout_weight="0.5"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="@dimen/small_text_size"
            android:text="@string/approved"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/QAFragment_answersCountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:layout_weight="0.5"
            android:textSize="@dimen/small_text_size"
            android:text="4 answers"/>
    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SideLayoutStyle"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"
        android:textSize="@dimen/large_text_size"
        android:text="@string/answers"/>

    <ListView
        android:id="@+id/QAFragment_answersList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp"
        android:divider="@android:color/darker_gray">
    </ListView>

</LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/QAFragment_fab"
        android:layout_marginTop="@dimen/fab_marginTop"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_add_white_48dp" />
</RelativeLayout>